# pysync

./: README.md  justfile  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
benchmarks/: benchmark_delta.py
src/pysync/: __init__.py  __main__.py  action.py  arguments.py  error.py  rolling_checksum.py  stats.py  strategy.py  sync.py
tests/: conftest.py  test_arguments.py  test_main.py  test_rolling_checksum.py  test_strategy.py  test_sync.py
